--- a/1Html/1CSS.css
+++ b/1Html/1CSS.css
@@ -91,38 +91,53 @@
         border-radius: 7px;
     }
 
-    aside {
-        position: fixed;
-        background-color: #2c3e50;
-        color: white;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-        width: 3%;
-        top: 260px;
-        right: 120px;
-        height: 270px;
-        border-radius: 20px;
-    }
+aside {
+    position: fixed;
+    background-color: #2c3e50;
+    color: white;
+    width: 3%;
+    top: 260px;
+    right: 120px;
+    height: 270px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    aside a {
-        text-decoration: none;
-        color: white;
-    }
+aside a {
+    text-decoration: none;
+    color: white;
+}
 
-    
-    aside ul {
-        list-style: none;
-        text-align: center;
-        align-items: center;margin-right: 30px;
-    }
+aside ul {
+    list-style: none;
+    text-align: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
 
-    aside i {
-        font-size: 35px;
-        margin-bottom: 20px;
-    }
+aside li {
+    margin-bottom: 15px;
+}
 
-    footer {
-        background-color: #2c3e50;
-    }
+aside li:last-child {
+    margin-bottom: 0;
+}
 
+aside i {
+    font-size: 35px;
+}
+
+footer {
+    background-color: #2c3e50;
+    text-align: center;
+    padding: 20px 10px;
+}
+
+footer p {
+    font-size: 24px;
+    color: white;
+}
